--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -9,7 +9,7 @@ body {
 body::before {
   content: "";
   position: fixed;
-  background: #040404 url("../img/3892661.png") top right no-repeat;
+  background: #040404 url("../img/bg.png") top right no-repeat;
   background-size: cover;
   left: 0;
   right: 0;
@@ -25,11 +25,11 @@ body::before {
 }
 
 a {
-  color: #18d26e;
+  color: #2ECC71;
 }
 
 a:hover {
-  color: #35e888;
+  color: #58D68D;
   text-decoration: none;
 }
 
@@ -57,33 +57,36 @@ h6 {
 }
 
 #header h1 {
-  font-size: 48px;
   margin: 0;
   padding: 0;
-  line-height: 1;
-  font-weight: 700;
   font-family: "Poppins", sans-serif;
+  font-size: 48px;
+  font-weight: 700;
+  line-height: 1;
+  text-shadow: 1px 1px 7px #212121;
 }
 
-#header h1 a,
+#header h1 a {
+  color: #FDD835;
+  line-height: 1;
+  display: inline-block;
+}
+
 #header h1 a:hover {
   color: #FFEB3B;
-  line-height: 1;
-  text-shadow: 1px 3px 7px #424242;
-  display: inline-block;
 }
 
 #header h2 {
   font-size: 24px;
   margin-top: 20px;
-  color: #FDFEFE;
-  text-shadow: 1px 3px 10px #424242;
+  color: #E0F7FA;
+  text-shadow: 1px 1px 7px #212121;
 }
 
 #header h2 span {
-  color: #fff;
-  border-bottom: 2px solid #18d26e;
-  padding-bottom: 6px;
+  color: #FDD835;
+  border-bottom: 2.5px solid #2ECC71;
+  padding-bottom: 5px;
 }
 
 #header img {
@@ -152,11 +155,11 @@ h6 {
 }
 
 .nav-menu a {
+  color: #E0F7FA;
   display: block;
   position: relative;
-  color: rgba(255, 255, 255, 0.7);
-  font-size: 16px;
   font-family: "Poppins", sans-serif;
+  font-size: 16px;
   font-weight: 400;
 }
 
@@ -167,7 +170,7 @@ h6 {
   height: 2px;
   bottom: -4px;
   left: 0;
-  background-color: #18d26e;
+  background-color: #2ECC71;
   visibility: hidden;
   width: 0px;
   transition: all 0.3s ease-in-out 0s;
@@ -183,7 +186,7 @@ h6 {
 .nav-menu a:hover,
 .nav-menu .active>a,
 .nav-menu li:hover>a {
-  color: #fff;
+  color: #FDFEFE;
   text-decoration: none;
 }
 
